// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCreateInteractionStateV2 should create state for Add 1`] = `
Object {
  "addTxId": null,
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": null,
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "lpTokenTargetEcosystem": "solana",
    "params": Object {
      "inputAmounts": Array [
        "100",
        "10",
      ],
      "minimumMintAmount": "110",
    },
    "poolId": "testnet-solana-usdc-usdt",
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 1,
  },
  "interactionType": 1,
  "requiredSplTokenAccounts": Object {
    "2w7wsGofEAvLiWXZgJySXZ4gofEhm8jQ9rtwXr1zbzUc": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "DznJzVAjPHBvyyqXEQgPWTonF2nhwoSoutPNbXjmsUvY": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for RemoveExactBurn 1`] = `
Object {
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": null,
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "lpTokenSourceEcosystem": "solana",
    "params": Object {
      "exactBurnAmount": "110",
      "minimumOutputAmount": "110",
    },
    "poolId": "testnet-solana-usdc-usdt",
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 3,
  },
  "interactionType": 3,
  "removeTxId": null,
  "requiredSplTokenAccounts": Object {
    "2w7wsGofEAvLiWXZgJySXZ4gofEhm8jQ9rtwXr1zbzUc": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for RemoveExactOutput 1`] = `
Object {
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": null,
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "lpTokenSourceEcosystem": "solana",
    "params": Object {
      "exactOutputAmounts": Array [
        "100",
        "10",
      ],
      "maximumBurnAmount": "110",
    },
    "poolId": "testnet-solana-usdc-usdt",
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 4,
  },
  "interactionType": 4,
  "removeTxId": null,
  "requiredSplTokenAccounts": Object {
    "2w7wsGofEAvLiWXZgJySXZ4gofEhm8jQ9rtwXr1zbzUc": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "DznJzVAjPHBvyyqXEQgPWTonF2nhwoSoutPNbXjmsUvY": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for RemoveUniform 1`] = `
Object {
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": null,
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "lpTokenSourceEcosystem": "solana",
    "params": Object {
      "exactBurnAmount": "110",
      "minimumOutputAmounts": Array [
        "100",
        "10",
      ],
    },
    "poolId": "testnet-solana-usdc-usdt",
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 2,
  },
  "interactionType": 2,
  "removeTxId": null,
  "requiredSplTokenAccounts": Object {
    "2w7wsGofEAvLiWXZgJySXZ4gofEhm8jQ9rtwXr1zbzUc": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "DznJzVAjPHBvyyqXEQgPWTonF2nhwoSoutPNbXjmsUvY": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for Swap from ETHEREUM USDC to BNB USDT 1`] = `
Object {
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": "0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1",
      "ethereum": "0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1",
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": null,
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "params": Object {
      "fromTokenData": Object {
        "ecosystemId": "ethereum",
        "tokenConfig": Object {
          "id": "testnet-ethereum-usdc",
          "nativeDetails": Object {
            "address": "0x45B167CF5b14007Ca0490dCfB7C4B870Ec0C0Aa6",
            "decimals": 6,
          },
          "nativeEcosystemId": "ethereum",
          "projectId": "usdc",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "7Lf95y8NuCU5RRC95oUtbBtckPAtbr9ubTgrCiyZ1kEf",
              "decimals": 6,
            },
          },
        },
        "value": "1000",
      },
      "toTokenData": Object {
        "ecosystemId": "bnb",
        "tokenConfig": Object {
          "id": "testnet-bnb-usdt",
          "nativeDetails": Object {
            "address": "0x98529E942FD121d9C470c3d4431A008257E0E714",
            "decimals": 18,
          },
          "nativeEcosystemId": "bnb",
          "projectId": "usdt",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "4dr6ogcLsaFf2RDF4LJU1CvNtNKxonVqQvM6vuGdVR1e",
              "decimals": 8,
            },
          },
        },
        "value": "1000",
      },
    },
    "poolIds": Array [
      "testnet-ethereum-usdc-usdt",
      "testnet-bnb-busd-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 5,
  },
  "interactionType": 5,
  "receiveAndSwapTxId": null,
  "swapAndTransferTxId": null,
  "swapType": "CrossChainEvmToEvm",
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for Swap from ETHEREUM USDC to ETHEREUM USDT 1`] = `
Object {
  "approvalTxIds": Array [],
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": "0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1",
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": null,
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "params": Object {
      "fromTokenData": Object {
        "ecosystemId": "ethereum",
        "tokenConfig": Object {
          "id": "testnet-ethereum-usdc",
          "nativeDetails": Object {
            "address": "0x45B167CF5b14007Ca0490dCfB7C4B870Ec0C0Aa6",
            "decimals": 6,
          },
          "nativeEcosystemId": "ethereum",
          "projectId": "usdc",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "7Lf95y8NuCU5RRC95oUtbBtckPAtbr9ubTgrCiyZ1kEf",
              "decimals": 6,
            },
          },
        },
        "value": "1000",
      },
      "toTokenData": Object {
        "ecosystemId": "ethereum",
        "tokenConfig": Object {
          "id": "testnet-ethereum-usdt",
          "nativeDetails": Object {
            "address": "0x996f42BdB0CB71F831C2eFB05Ac6d0d226979e5B",
            "decimals": 6,
          },
          "nativeEcosystemId": "ethereum",
          "projectId": "usdt",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "8Cfyi1mYXqKATUkMPvb9BMXikdbppJst6E7eQJkKjAtf",
              "decimals": 6,
            },
          },
        },
        "value": "1000",
      },
    },
    "poolIds": Array [
      "testnet-ethereum-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 5,
  },
  "interactionType": 5,
  "onChainSwapTxId": null,
  "swapType": "SingleChainEvm",
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for Swap from ETHEREUM USDC to SOLANA USDC 1`] = `
Object {
  "approvalTxIds": Array [],
  "claimTokenOnSolanaTxId": null,
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": "0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1",
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "params": Object {
      "fromTokenData": Object {
        "ecosystemId": "ethereum",
        "tokenConfig": Object {
          "id": "testnet-ethereum-usdc",
          "nativeDetails": Object {
            "address": "0x45B167CF5b14007Ca0490dCfB7C4B870Ec0C0Aa6",
            "decimals": 6,
          },
          "nativeEcosystemId": "ethereum",
          "projectId": "usdc",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "7Lf95y8NuCU5RRC95oUtbBtckPAtbr9ubTgrCiyZ1kEf",
              "decimals": 6,
            },
          },
        },
        "value": "1000",
      },
      "toTokenData": Object {
        "ecosystemId": "solana",
        "tokenConfig": Object {
          "id": "testnet-solana-usdc-v2",
          "nativeDetails": Object {
            "address": "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq",
            "decimals": 6,
          },
          "nativeEcosystemId": "solana",
          "projectId": "usdc",
          "wrappedDetails": Map {},
        },
        "value": "1000",
      },
    },
    "poolIds": Array [
      "testnet-ethereum-usdc-usdt",
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 5,
  },
  "interactionType": 5,
  "postVaaOnSolanaTxIds": Array [],
  "requiredSplTokenAccounts": Object {
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "signatureSetAddress": null,
  "swapAndTransferTxId": null,
  "swapFromSwimUsdTxId": null,
  "swapType": "CrossChainEvmToSolana",
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for Swap from SOLANA USDC to ETHEREUM USDC 1`] = `
Object {
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": "0x90f8bf6a479f320ead074411a4b0e7944ea8c9c1",
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "params": Object {
      "fromTokenData": Object {
        "ecosystemId": "solana",
        "tokenConfig": Object {
          "id": "testnet-solana-usdc-v2",
          "nativeDetails": Object {
            "address": "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq",
            "decimals": 6,
          },
          "nativeEcosystemId": "solana",
          "projectId": "usdc",
          "wrappedDetails": Map {},
        },
        "value": "1000",
      },
      "toTokenData": Object {
        "ecosystemId": "ethereum",
        "tokenConfig": Object {
          "id": "testnet-ethereum-usdc",
          "nativeDetails": Object {
            "address": "0x45B167CF5b14007Ca0490dCfB7C4B870Ec0C0Aa6",
            "decimals": 6,
          },
          "nativeEcosystemId": "ethereum",
          "projectId": "usdc",
          "wrappedDetails": Map {
            "solana" => Object {
              "address": "7Lf95y8NuCU5RRC95oUtbBtckPAtbr9ubTgrCiyZ1kEf",
              "decimals": 6,
            },
          },
        },
        "value": "1000",
      },
    },
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
      "testnet-ethereum-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 5,
  },
  "interactionType": 5,
  "receiveAndSwapTxId": null,
  "requiredSplTokenAccounts": Object {
    "3ngTtoyP9GFybFifX1dr7gCFXFiM2Wr6NfXn6EuU7k6C": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "swapToSwimUsdTxId": null,
  "swapType": "CrossChainSolanaToEvm",
  "transferSwimUsdToEvmTxId": null,
  "version": 2,
}
`;

exports[`useCreateInteractionStateV2 should create state for Swap from SOLANA USDC to SOLANA USDT 1`] = `
Object {
  "interaction": Object {
    "connectedWallets": Object {
      "acala": null,
      "aptos": null,
      "aurora": null,
      "avalanche": null,
      "bnb": null,
      "ethereum": null,
      "fantom": null,
      "karura": null,
      "polygon": null,
      "solana": "6sbzC1eH4FTujJXWj51eQe25cYvr4xfXbJ1vAj7j2k5J",
    },
    "env": "Testnet",
    "id": "11111111111111111111111111111111",
    "params": Object {
      "fromTokenData": Object {
        "ecosystemId": "solana",
        "tokenConfig": Object {
          "id": "testnet-solana-usdc-v2",
          "nativeDetails": Object {
            "address": "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq",
            "decimals": 6,
          },
          "nativeEcosystemId": "solana",
          "projectId": "usdc",
          "wrappedDetails": Map {},
        },
        "value": "1000",
      },
      "toTokenData": Object {
        "ecosystemId": "solana",
        "tokenConfig": Object {
          "id": "testnet-solana-usdt-v2",
          "nativeDetails": Object {
            "address": "8VbikoRxEoyYzTDzDcPTSsGk2E5mM7fK1WrVpKrVd75M",
            "decimals": 6,
          },
          "nativeEcosystemId": "solana",
          "projectId": "usdt",
          "wrappedDetails": Map {},
        },
        "value": "1000",
      },
    },
    "poolIds": Array [
      "testnet-solana-usdc-usdt",
    ],
    "submittedAt": 1657544558283,
    "type": 5,
  },
  "interactionType": 5,
  "onChainSwapTxId": null,
  "requiredSplTokenAccounts": Object {
    "6iSRgpK4oiqJZuhpLsTecW3n9xBKUq9N3VPQN7RinYwq": Object {
      "isExistingAccount": false,
      "txId": null,
    },
    "8VbikoRxEoyYzTDzDcPTSsGk2E5mM7fK1WrVpKrVd75M": Object {
      "isExistingAccount": false,
      "txId": null,
    },
  },
  "swapType": "SingleChainSolana",
  "version": 2,
}
`;
